Update group ID

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
-group = 'me.yevgeny'
+group = 'com.yevgenyk.training'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
